<resources>
    <string name="app_name" translatable="false">SWOB</string>
    <string name="app_name_full" translatable="false">SMSWithoutBorders</string>
    <string name="email_compose_to">
        To
    </string>
    <string name="email_compose_cc">
        cc
    </string>
    <string name="email_compose_bcc">
       bcc
    </string>
    <string name="email_compose_subject">
       subject
    </string>
    <string name="email_compose_body">Compose email</string>
    <string name="gateway_clients_settings_operator_id">Your Operator ID</string>
    <string name="homepage_recent">
        Recent
    </string>
    <string name="homepage_search">
        Search
    </string>
    <string name="homepage_no_recent_messages">No Recent Messages</string>
    <string name="message_compose_phonenumber">Contact\'s phone number</string>
    <string name="message_compose_body">Message</string>
    <string name="message_compose_invalid_number">Please check the number is valid and has a country code</string>
    <string name="message_compose_empty_recipient">Recipient cannot be empty!</string>
    <string name="message_compose_empty_body">Body should not be empty!</string>
    <string name="homepage_confirm">Confirm </string>
    <string name="homepage_snackbar_cannot_sign_key">A stronger security is present, please log out and back in to update your security.</string>
    <string name="homepage_enter_password">Enter Password</string>
    <string name="homepage_enter_password_prompt">Same password used when creating your account</string>
    <string name="homepage_read_our_privacy_policy">Read our privacy policy</string>
    <string name="settings_settings">Settings</string>
    <string name="settings_automatically_stored_access">Refresh saved platforms</string>
    <string name="settings_automatically_stored_access_warning">Warning! Resyncing will clear all previously sent messages.</string>
    <string name="synchronize_type_header">Synchronize</string>
    <string name="synchronize_type_header_automatic_synchronize_text_continue">Continue</string>
    <string name="synchronize_type_header_manual_synchronize_text">Manually link your app with your online account</string>
    <string name="synchronize_type_header_manual_synchronize_text_continue">Scan QR</string>
    <string name="tweet_compose_tweet">Post</string>
    <string name="tweet_compose_prompt">What\'s happening?</string>
    <string name="welcome_welcome">Welcome </string>
    <string name="welcome_signup">SIGNUP</string>
    <string name="welcome_login_prompt">Already have an account?</string>
    <string name="welcome_synchronize">SIGNIN</string>
    <string name="main_navigation_recents">Recent</string>
    <string name="main_navigation_settings">Settings</string>
    <string name="message_compose_header">Message…</string>
    <string name="platforms_compose_header">
        Compose for Stored Access
    </string>
    <string name="settings_custom_platforms_category">
        Saved platforms
    </string>
    <string name="settings_store_access_text">
        Store Access
    </string>
    <string name="settings_store_access_text_summary">
        Add more platforms to use offline
    </string>
    <string name="settings_accessibility_category">
        Accessibility
    </string>
    <string name="settings_language">Language</string>
    <string name="settings_language_summary" translatable="false"></string>
    <string name="settings_security_category">
        Security and Privacy
    </string>
    <string name="settings_security">
        Security
    </string>
    <string name="settings_security_category_summary">
        Enable app locks and pin codes
    </string>
    <string name="settings_advanced_category">Advanced settings</string>
    <string name="settings_gateway_clients_text">
        Gateway Clients
    </string>
    <string name="settings_gateway_clients_text_summary">
        Add/Remove Gateway clients for SMS routing
    </string>
    <string name="settings_lock_screen_preference_category">
        Phone Lockscreen options
    </string>
    <string name="settings_security_and_privacy_enable_lockscreen_open">Enable lockscreen
    </string>
    <string name="settings_security_and_privacy_enable_lockscreen_open_summary">Require lockscreen pin/fingerprint when starting the app</string>
    <string name="settings_security_and_privacy_enable_lockscreen_read_encrypted">Enable lockscreen for decryption
    </string>
    <string name="settings_security_and_privacy_enable_lockscreen_read_encrypted_summary">Require lockscreen pin/fingerprint when decryption is required in app e.g opening sent messages</string>
    <string name="settings_biometric_enable_btn">Enable</string>
    <string name="settings_biometric_not_now_btn">Not now</string>
    <string name="settings_pin_preference_category">
        Custom PIN options
    </string>
    <string name="settings_security_and_privacy_enable_pin">
        Enable PIN for decryption
    </string>
    <string name="settings_security_and_privacy_enable_pin_summary">
        Unavailable
    </string>
    <string name="settings_security_and_privacy_account">
        Account
    </string>
    <string name="settings_security_and_privacy_account_logout">
        Logout
    </string>
    <string name="settings_security_and_privacy_account_logout_summary">Logout of your account. You can always log back in, however you current messages would be deleted. </string>
    <string name="settings_security_and_privacy_account_delete">
        Delete
    </string>
    <string name="settings_security_and_privacy_account_delete_summary">
        Deleting your account means deleting all your saved accounts online. You can always recreate your account once needed.
    </string>
    <string name="settings_security_and_privacy_account_delete_url">https://smswithoutborders.github.io/docs/tutorials/delete-account/</string>
    <string name="language_choose_text">
        Choose your preferred language
    </string>
    <string name="language_english">
        English
    </string>
    <string name="language_french">
        French
    </string>
    <string name="language_farsi">
        Farsi
    </string>
    <string name="language_english_value" translatable="false">
        en
    </string>
    <string name="language_french_value" translatable="false">
        fr
    </string>
    <string name="language_farsi_value" translatable="false">
        fa
    </string>
    <string name="gateway_clients_settings_header">Available Gateway Clients</string>
    <string name="password_failed">Failed to authenticate! Please try again…</string>
    <string name="password_empty">Password cannot be empty!</string>
    <string name="default_gateway_MSISDN_0" translatable="false">+237679466332</string>
    <string name="default_gateway_MSISDN_2" translatable="false">+237690826242</string>
    <string name="default_gateway_MSISDN_3" translatable="false">+2348131498393</string>
    <string name="default_operator_id" translatable="false">62402 </string>
    <string name="message_compose_groups_option">
        Telegram user\'s name (optional)
    </string>
    <string name="message_compose_groups_name">User\'s name</string>
    <string name="gateway_client_settings_add_custom_gateway_add_btn">Add</string>
    <string name="gateway_client_settings_add_custom_empty_error">Please provide a phone number</string>
    <string name="synchronize_type_header_automatic_synchronize_text">Automatically link your app with your online account</string>
    <string name="default_seeds_url" translatable="false">
        http://seeds.smswithoutborders.com
    </string>
    <string name="new_gateway_client_alias">
        Alias (optional)
    </string>
    <string name="gateway_client_alias_description">Name to help remember the Gateway client</string>
    <string name="gateway_client_save_btn_text">Save</string>
    <string name="new_gateway_client_custom_alias">
        Custom Gateway Client
    </string>
    <string name="choose_sms_app">
        Select an SMS messaging app
    </string>
    <string name="messages_title">
        Notifications
    </string>
    <string name="settings_biometric_login">
        Biometric Login
    </string>
    <string name="settings_biometric_login_subtitle">Log in using your biometric credential</string>
    <string name="settings_biometric_login_description">Touch the sensor to use your biometric credential</string>
    <string name="notifications_queue_name" translatable="false">
        notifications-smswithoutborders-
    </string>
    <string name="notifications_exchange_name" translatable="false">
        notifications-smswithoutborders-exchange
    </string>
    <string name="notifications_url" translatable="false">
        smswithoutborders.com
    </string>
    <string name="no_notifications">
        No Recent Notifications
    </string>
    <string name="title_activity_onboarding" translatable="false">OnboardingActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login_wrong_credentials">Wrong number or password, please try again…</string>
    <string name="default_login_url" translatable="false">
        https://smswithoutborders.com:9000/v2/login
    </string>
    <string name="default_backend_url" translatable="false">
        https://smswithoutborders.com:9000
    </string>
    <string name="homepage_compose_modal_no_platforms">No Platforms saved</string>
    <string name="email_compose_title">Compose email</string>
    <string name="security_settings_failed_to_switch_security">Failed to switch security on…</string>
    <string name="settings_security_biometric_user_cannot_add_this_functionality_at_this_time">User cannot add this functionality at this time.</string>
    <string name="gateway_client_add_label">Add</string>
    <string name="gateway_client_refresh_label">Refresh</string>
    <string name="lock_screen_relay_sms_is_locked">SWOB App is locked</string>
    <string name="lock_screen_unlock_with_your_phone_s_locking_system">Unlock with your phone\'s locking system</string>
    <string name="gateway_client_add_custom_example_text">e.g +237123456789 or select contact</string>
    <string name="gateway_client_add_custom_text">Enter phone number</string>
    <string name="gateway_client_add_gateway_client_text">Add Gateway Client</string>
    <string name="otp_verification_code_template" translatable="false">Your SMSWithoutBorders-Auth verification code is: </string>
    <string name="recaptcha_client_side_key" translatable="false">6LfrOsQpAAAAALsmO5WjVEmybrKB_rl6DwhK8mMw</string>
    <string name="oauth_gmail_client_id" translatable="false">86878463881-3miiph6l8e8almabu5mat1gun3aaumrv.apps.googleusercontent.com</string>
    <string name="oauth_x_client_id" translatable="false">WGptX1N5dkJiS1lVUFZUSC1wYkk6MTpjaQ</string>
    <string name="oauth_openid_redirect_url_scheme" translatable="false">apps</string>
    <string name="onboarding_let_s_get_you_started">Let\'s get you started</string>
    <string name="rebranding_text">Hi there, we are rebranding the SWOB app from SMSWOB to RelaySMS as part of the SMSWithoutBorders project. You will be able to find the app on the playstore using the name RelaySMS</string>
    <string name="read_more">Read more</string>
    <string name="important_notice">Important Notice</string>
    <string name="close">close</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="create_new_account_or_log_into_existing_one_to_begin_sending_messages_from_stored_online_platforms">Create new account or log into existing one to begin sending messages from stored online platforms</string>
    <string name="no_vault_account">No Vault account</string>
</resources>