<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_accessibility_category">
        <ListPreference
            app:icon="@drawable/ic_round_language_24"
            app:defaultValue="@string/language_english_value"
            app:entries="@array/language_options"
            app:entryValues="@array/language_values"
            app:iconSpaceReserved="false"
            app:key="language_options"
            app:title="@string/settings_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/messaging">
        <SwitchPreference
            app:icon="@drawable/round_message_24"
            app:key="use_phone_number_switch"
            app:summary="@string/you_have_a_device_id_for_the_device_you_log_into_it_is_used_to_identify_you_on_the_vault_you_can_switch_to_phone_number_to_reduce_size_of_sms_message"
            app:title="Validate with phone number" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="security_and_privacy_settings"
        app:title="@string/settings_security_category">
        <Preference
            app:icon="@drawable/ic_baseline_security_24"
            app:key="security_settings"
            app:summary="@string/settings_security_category_summary"
            app:title="@string/settings_security" />

    </PreferenceCategory>

</PreferenceScreen>
