<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Models.GatewayClients.GatewayClientAddModalFragment"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    style="@style/Widget.Material3.BottomSheet.Modal">
    <LinearLayout
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:id="@+id/gateway_client_add_modal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/gateway_client_add_gateway_client_text"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:helperText="@string/gateway_client_add_custom_example_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconDrawable="@drawable/ic_round_contacts_24"
            app:endIconMode="custom"
            android:hint="@string/settings_gateway_clients_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gateway_client_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:helperText="@string/gateway_client_alias_description"
            android:hint="@string/new_gateway_client_alias">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gateway_client_add_contact_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gateway_client_add_custom_btn"
            android:text="@string/gateway_client_save_btn_text"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>