<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    style="@style/Widget.Material3.BottomSheet.Modal">

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:orientation="vertical"
        android:id="@+id/rebranding_alerts_popups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/important_notice"
            android:textAlignment="center"
            android:padding="16dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/rebranding_text"
            android:padding="16dp"
            android:lineSpacingExtra="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:id="@+id/rebranding_alert_read_more"
            android:text="@string/read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rebranding_close"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/close"
            android:textColor="@color/md_theme_onBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
