<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:onClick="linkPrivacyPolicy"
        android:textColor="@color/link_color"
        android:text="@string/homepage_read_our_privacy_policy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="277dp"
        android:layout_height="214dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/new_logo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/welcome_welcome"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/welcome_signup"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_synchronize"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/welcome_login_prompt"
        android:textAlignment="center"
        android:textColor="@color/default_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_signup_btn"
        app:layout_constraintStart_toStartOf="@+id/welcome_signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/welcome_signup_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>