<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button4"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-light"
        android:onClick="linkPrivacyPolicy"
        android:text="@string/homepage_read_our_privacy_policy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#81bffc"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="277dp"
        android:layout_height="214dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swob_logo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/welcome_welcome"
        android:textColor="#FFFFFF"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <Button
        android:id="@+id/sync_continue_btn"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="64dp"

        android:backgroundTint="#FFFFFF"
        android:onClick="onClickSignupBtn"
        android:text="@string/welcome_signup"
        android:textAlignment="center"
        android:textColor="#061993"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:iconTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <Button
        android:id="@+id/containedButton1"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="onContinueClick"
        android:text="@string/welcome_synchronize"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/welcome_login_prompt"
        android:textColor="#DAD8D8"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sync_continue_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>